fix: Fixed all Test Cases